--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mmy-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Kiril0l.github.io/my-app",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -28,7 +29,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "react-test-renderer": "^18.2.0"
   }
 }
